fixed overflow on form object. Responsivity

--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -83,6 +83,9 @@ form {
 }
 
 @media (max-width: 60rem) {
+  body{
+    font-size: 1rem;
+  }
   #hero_img {
     display: none;
   }
@@ -108,10 +111,11 @@ form {
   #copy {
     max-width: 100vw;
   }
-  /* #form { */
-  /*   padding-top: 4rem; */
-  /*   padding-bottom: 4rem; */
-  /*   padding-left: 2rem; */
-  /*   padding-right: 2rem; */
+  #form {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
